feat: complete REST API for tutors
