# internal/handler/tutor.go
@@ -2,6 +2,7 @@ package handler
 
 import (
 	"encoding/json"
+	"knowledge-base/internal/models"
 	"knowledge-base/internal/service"
 	"net/http"
 	"strconv" // преобразование строк в число
@@ -18,8 +19,8 @@ func NewTutorhandler(tutorService *service.Tutor) *TutorHandler {
 	return &TutorHandler{tutorService: tutorService}
 }
 
-// @Summary Получить всех тьюторов
-// @Description Возвращает список всех тьюторов
+// @Summary Get all tutors
+// @Description Returns list of all tutors
 // @Tags tutors
 // @Produce json
 // @Success 200 {array} models.Tutor
@@ -49,14 +50,14 @@ func (tutorHandler *TutorHandler) GetAllTutors(w http.ResponseWriter, r *http.Re
 	}
 }
 
-// @Summary Получить тьютора по ID
-// @Description Возвращает тьютора по указанному ID
+// @Summary Get tutor by ID
+// @Description Returns tutor by specified ID
 // @Tags tutors
 // @Produce json
-// @Param id path int true "ID тьютора"
+// @Param id path int true "Tutor ID"
 // @Success 200 {object} models.Tutor
-// @Failure 400 {string} string "Неверный ID"
-// @Failure 404 {string} string "Тьютор не найден"
+// @Failure 400 {string} string "Invalid ID"
+// @Failure 404 {string} string "Tutor not found"
 // @Router /tutors/{id} [get]
 func (tutorHandler *TutorHandler) GetTutorByID(w http.ResponseWriter, r *http.Request) {
 
@@ -116,4 +117,100 @@ func (tutorHandler *TutorHandler) DeleteTutorByID(w http.ResponseWriter, r *http
 
 	//  Успешный ответ - 204 No Content
 	w.WriteHeader(http.StatusNoContent)
+}
+
+// @Summary Create new tutor
+// @Description Create a new tutor with full name and email
+// @Tags tutors
+// @Accept json
+// @Produce json
+// @Param tutor body models.TutorSwaggerRequestBody true "Tutor data"
+// @Success 201 {object} map[string]interface{} "Tutor created"
+// @Failure 400 {string} string "Invalid request"
+// @Failure 500 {string} string "Internal server error"
+// @Router /tutors [post]
+func (tutorHandler *TutorHandler) PostTutorString(w http.ResponseWriter, r *http.Request) {
+	// Проверка метода не нужна - Gorilla Mux уже гарантирует POST
+
+	// Парсим JSON из тела запроса
+	var tutor models.Tutor
+
+	err := json.NewDecoder(r.Body).Decode(&tutor)
+
+	if err != nil {
+		http.Error(w, "Invalid JSON: "+err.Error(), http.StatusBadRequest)
+		return
+	}
+
+	// Валидация
+	if tutor.FullName == "" || tutor.Email == "" {
+		http.Error(w, "full_name and email are required", http.StatusBadRequest)
+		return
+	}
+
+	// Вызов сервиса
+	id, err := tutorHandler.tutorService.PostString(tutor.FullName, tutor.Email)
+	if err != nil {
+		http.Error(w, "Failed to create tutor: "+err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	// Ответ
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusCreated)
+	json.NewEncoder(w).Encode(map[string]interface{}{ // используем словарь для того, чтобы отдать json (interface{} - что то типа object)
+		"id":      id,
+		"message": "Tutor created successfully",
+	})
+}
+
+// @Summary Update tutor
+// @Description Update tutor with full name and email
+// @Tags tutors
+// @Accept json
+// @Produce json
+// @Param id path int true "Tutor ID"
+// @Param tutor body models.TutorSwaggerRequestBody true "Tutor data"
+// @Success 200 {object} map[string]string "Tutor created"
+// @Failure 400 {string} string "Invalid request"
+// @Failure 404 {string} string "Internal server error"
+// @Router /tutors/{id} [put]
+func (tutorHandler *TutorHandler) PutTutorString(w http.ResponseWriter, r *http.Request) {
+
+	vars := mux.Vars(r)
+	idStr := vars["id"]
+
+	id, err := strconv.Atoi(idStr)
+	if err != nil {
+		http.Error(w, "Неверный ID", http.StatusBadRequest)
+		return
+	}
+
+	var tutor models.Tutor
+
+	err = json.NewDecoder(r.Body).Decode(&tutor)
+
+	if err != nil {
+		http.Error(w, "Invalid JSON: "+err.Error(), http.StatusBadRequest)
+		return
+	}
+
+	if tutor.FullName == "" || tutor.Email == "" {
+		http.Error(w, "full_name and email are required", http.StatusBadRequest)
+		return
+	}
+
+	updatedTutor, err := tutorHandler.tutorService.PutString(tutor.FullName, tutor.Email, id)
+	if err != nil {
+		http.Error(w, "Тьютор не найден", http.StatusNotFound)
+		return
+	}
+
+	// Ответ
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	json.NewEncoder(w).Encode(map[string]string{
+		"full_name": updatedTutor.FullName,
+		"email":     updatedTutor.Email,
+	})
 }
