# internal/models/tutor.go
@@ -2,6 +2,11 @@ package models
 
 type Tutor struct {
 	ID       int    `db:"id" json:"id"`
-	Fullname string `db:"full_name" json:"full_name"`
+	FullName string `db:"full_name" json:"full_name"`
 	Email    string `db:"email" json:"email"`
+}
+
+type TutorSwaggerRequestBody struct { // Нужен для запросов ы swagger
+	FullName string `json:"full_name"`
+	Email    string `json:"email"`
 }
